--- a/css/app.css
+++ b/css/app.css
@@ -1,60 +1,64 @@
 :root {
-    --color1: #101820;
-    --color2: #6C63FF;
-    --color3: #D4DFEC48;
+  --color1: #101820;
+  --color2: #6c63ff;
+  --color3: #d4dfec48;
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 h1 {
-    font-weight: bolder;
+  font-weight: bolder;
 }
 
 /* Buttons */
 
-/* Cards */
+.btn {
+  background: #6c63ff;
+  border-radius: 10px;
+}
 
-.card{
-    box-shadow: 5px 10px;
+.btn:focus {
+  box-shadow: none;
+  outline: none;
 }
 
 /* NavBar */
 
 .scrolled {
-    color: var(--color1) !important;
-    background: white;
-    transition: background 500ms;
-    border-bottom: var(--color1) solid 2px;
+  color: var(--color1) !important;
+  background: white;
+  transition: background 500ms;
+  border-bottom: var(--color1) solid 2px;
 }
 
 .scrolled a {
-    color: var(--color1) !important;
+  color: var(--color1) !important;
 }
 
 .scrolled div button .navbar-toggler-icon {
-    color: var(--color1) !important;
+  color: var(--color1) !important;
 }
 
 #mainNavbar {
-    font-weight: 100;
-    color: white;
+  font-weight: 100;
+  color: white;
 }
 
 #mainNavbar a {
-    color: white;
+  color: white;
 }
 
 .bg-dark {
-    background-color: var(--color1) !important;
+  background-color: var(--color1) !important;
 }
 
 /* Header */
 
 #header {
-    background: var(--color1);
-    color: white;
+  background: var(--color1);
+  color: white;
 }
 
 /* #header h3{
@@ -62,95 +66,97 @@ h1 {
 } */
 
 #header img {
-    width: 175px;
+  width: 175px;
 }
 
 #header .row {
-    min-height: 650px;
+  min-height: 650px;
 }
 
 /* Spacing */
 
 .space {
-    height: 150px;
+  height: 150px;
 }
 
 /* Buttons */
 
 .btn {
-    border: none;
+  border: none;
 }
 
-.btn:hover{
-    border: none;
+.btn:hover {
+  border: none;
 }
 
 /* About-Me*/
 
 #about-me {
-    border-bottom: 1px solid #e7e7e7;
+  border-bottom: 1px solid #e7e7e7;
 }
 
-#about-me section{
-    background-color: var(--color3);
-    border-top: 1px solid #e7e7e7;
+#about-me section {
+  background-color: var(--color3);
+  border-top: 1px solid #e7e7e7;
 }
 
-#about-me #kinaxis img{
-    width: 300px;
+#about-me #kinaxis {
+  background-color: white;
 }
 
-#about-me #nrc{
-    background-color: white;
+#about-me #kinaxis img {
+  width: 300px;
+}
+
+#about-me #nrc {
+}
+
+#about-me #ta {
+  background-color: white;
 }
 
 #about-me section .row {
-    height: 300px;
+  height: 300px;
 }
 
 #about-me #carleton img {
-    width: 500px;
+  width: 500px;
 }
 
 #ext-curr {
-    border-top: 1px solid #e7e7e7;
-    border-bottom: 1px solid #e7e7e7;
-    background-color: var(--color3);
+  border-top: 1px solid #e7e7e7;
+  border-bottom: 1px solid #e7e7e7;
+  background-color: var(--color3);
 }
 
 #ext-curr img {
-    width: 350px;
+  width: 350px;
 }
 
 #ext-curr .row {
-    height: 200px;
-}
-
-/* MainContent */
-
-.card {
-    border-color: rgb(72, 29, 116);
-    margin-bottom: 1.5rem !important;
-}
-
-.card-header {
-    font-size: 38px;
-    background-color: white;
+  height: 200px;
 }
 
 /* Footer */
 
 .footer {
-    background: var(--color1);
-    height: 75px;
-    color: white;
+  background: var(--color1);
+  height: 75px;
+  color: white;
 }
 
 .footer .row {
-    height: 75px;
+  height: 75px;
 }
 
 .footer .row .fab {
-    color: white;
+  color: white;
 }
 
+.project-card {
+  border: 1px solid lightgrey;
+}
+
+img {
+  max-width: 400px;
+}
